added rest server to link with main app